# DSD3_ROS2

./: README.md  pkg_summary.md
AI_object_detection/: README_AI.md  package.xml  setup.cfg  setup.py
AI_object_detection/AI_object_detection/: collect_data_node.py  object_detection_node.py  yolo_world_node.py
ex6_turtlebot3_description/: CMakeLists.txt  ex6_step_by_step.md  package.xml
ex6_turtlebot3_description/launch/: rsp_gui_full.launch.py  rsp_gui_skeleton.launch.py
ex6_turtlebot3_description/rviz/: urdf_config.rviz
ex6_turtlebot3_description/urdf/: turtlebot3_full.urdf  turtlebot3_skeleton.urdf
ros2_pkg/: CMakeLists.txt  package.xml
ros2_pkg/action/: Ex5FullAction.action  Ex5SkeletonAction.action
ros2_pkg/launch/ex4_launch/: full.launch.py  skeleton.launch.py
ros2_pkg/msg/: Ex5FullMessage.msg  Ex5SkeletonMessage.msg
ros2_pkg/scripts/: ros2_code_summary.md
ros2_pkg/scripts/ex1_pub_sub/: full_pub.py  full_sub.py  skeleton_pub.py  skeleton_sub.py
ros2_pkg/scripts/ex2_service/: full_srv.py  skeleton_srv.py
ros2_pkg/scripts/ex3_action/: full_action.py  skeleton_action.py
ros2_pkg/scripts/ex5_custom_msg/: ex5_full_custom.py
ros2_pkg/srv/: Ex5FullService.srv  Ex5SkeletonService.srv
turtlebot3_cartographer_custom/: cartographer_step_by_step.md  cartographer_vs_slam_toolbox.md
webots_diffdrive/launch/: custom_bot_launch.launch.py  turtlebot_multi_launch.launch.py
webots_diffdrive/resource/: urdf_camera.urdf
